@@ -16,13 +16,13 @@ import net.runelite.api.widgets.Widget;
 
 import java.time.Instant;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
 public class TeleportLoader {
     private static final int BUILD_DELAY_SECONDS = 5;
-    private static Instant lastBuild = Instant.now();
+    private static Instant lastBuild = Instant.now().minusSeconds(6);
+    private static List<Teleport> LAST_TELEPORT_LIST = Collections.emptyList();
     private static final int[] RING_OF_DUELING = new int[]{2552, 2554, 2556, 2558, 2560, 2562, 2564, 2566};
     private static final int[] GAMES_NECKLACE = new int[]{3853, 3863, 3855, 3857, 3859, 3861, 3863, 3865, 3867};
     private static final int[] COMBAT_BRACELET = new int[]{11118, 11972, 11974, 11120, 11122, 11124};
@@ -38,7 +38,7 @@ public class TeleportLoader {
 
     public static List<Teleport> buildTeleports() {
         if (lastBuild.plusSeconds(BUILD_DELAY_SECONDS).isAfter(Instant.now())) {
-            return Collections.emptyList();
+            return List.copyOf(LAST_TELEPORT_LIST);
         }
 
         lastBuild = Instant.now();
@@ -149,8 +149,8 @@ public class TeleportLoader {
                 }
             }
         }
-
-        return teleports;
+        LAST_TELEPORT_LIST = teleports;
+        return List.copyOf(LAST_TELEPORT_LIST);
     }
 
     public static void jewelryTeleport(String target, int... ids) {
